enable short benchmarks for extra testing coverage in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ go:
   - 1.6
   - tip
 script:
-  - go test -v
-  - go test -v -race
+  - go test -v -bench=. -benchtime=100ms
+  - go test -v -bench=. -benchtime=100ms -race
